rust_core/target/debug/build/rust_core-6135a91b0c643109/out/bindings.rs

/* automatically generated by rust-bindgen 0.69.5 */

pub const CAPTURE_DEVICE_FLAG_UP: u32 = 1;
pub const CAPTURE_DEVICE_FLAG_RUNNING: u32 = 2;
pub const CAPTURE_DEVICE_FLAG_PROMISC: u32 = 4;
pub const CAPTURE_DEVICE_FLAG_LOOPBACK: u32 = 8;
pub const CAPTURE_DEVICE_FLAG_WIRELESS: u32 = 16;
pub const CAPTURE_DEVICE_FLAG_VIRTUAL: u32 = 32;
pub const CAPTURE_DEVICE_FLAG_HAS_IPV4: u32 = 64;
pub const CAPTURE_DEVICE_FLAG_HAS_IPV6: u32 = 128;
pub type __time_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct timespec {
    pub tv_sec: __time_t,
    pub tv_nsec: __syscall_slong_t,
}
#[test]
fn bindgen_test_layout_timespec() {
    const UNINIT: ::std::mem::MaybeUninit<timespec> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<timespec>(),
        16usize,
        concat!("Size of: ", stringify!(timespec))
    );
    assert_eq!(
        ::std::mem::align_of::<timespec>(),
        8usize,
        concat!("Alignment of ", stringify!(timespec))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tv_sec) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(timespec),
            "::",
            stringify!(tv_sec)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tv_nsec) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(timespec),
            "::",
            stringify!(tv_nsec)
        )
    );
}
#[doc = " 数据包结构"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct packet_t {
    pub data: *const u8,
    pub len: u32,
    pub caplen: u32,
    pub ts: timespec,
    pub if_index: u32,
    pub flags: u32,
    pub protocol: u32,
    pub vlan_tci: u32,
    pub hash: u32,
}
#[test]
fn bindgen_test_layout_packet_t() {
    const UNINIT: ::std::mem::MaybeUninit<packet_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<packet_t>(),
        56usize,
        concat!("Size of: ", stringify!(packet_t))
    );
    assert_eq!(
        ::std::mem::align_of::<packet_t>(),
        8usize,
        concat!("Alignment of ", stringify!(packet_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).len) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(len)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).caplen) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(caplen)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ts) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(ts)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).if_index) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(if_index)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).protocol) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(protocol)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vlan_tci) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(vlan_tci)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hash) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(packet_t),
            "::",
            stringify!(hash)
        )
    );
}
#[doc = " 设备信息结构"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_device_t {
    pub name: [::std::os::raw::c_char; 32usize],
    pub description: [::std::os::raw::c_char; 256usize],
    pub flags: u32,
    pub type_: u32,
    pub mtu: u32,
    pub speed: u32,
    pub mac: [u8; 6usize],
    pub ipv4: u32,
    pub netmask: u32,
    pub broadcast: u32,
}
#[test]
fn bindgen_test_layout_capture_device_t() {
    const UNINIT: ::std::mem::MaybeUninit<capture_device_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<capture_device_t>(),
        324usize,
        concat!("Size of: ", stringify!(capture_device_t))
    );
    assert_eq!(
        ::std::mem::align_of::<capture_device_t>(),
        4usize,
        concat!("Alignment of ", stringify!(capture_device_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).description) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(description)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        288usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        292usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mtu) as usize - ptr as usize },
        296usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(mtu)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).speed) as usize - ptr as usize },
        300usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(speed)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mac) as usize - ptr as usize },
        304usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(mac)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ipv4) as usize - ptr as usize },
        312usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(ipv4)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).netmask) as usize - ptr as usize },
        316usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(netmask)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).broadcast) as usize - ptr as usize },
        320usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_device_t),
            "::",
            stringify!(broadcast)
        )
    );
}
#[doc = " 统计信息结构"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct capture_stats_t {
    pub packets_received: u64,
    pub packets_dropped: u64,
    pub packets_if_dropped: u64,
    pub bytes_received: u64,
    pub start_time: timespec,
    pub end_time: timespec,
}
#[test]
fn bindgen_test_layout_capture_stats_t() {
    const UNINIT: ::std::mem::MaybeUninit<capture_stats_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<capture_stats_t>(),
        64usize,
        concat!("Size of: ", stringify!(capture_stats_t))
    );
    assert_eq!(
        ::std::mem::align_of::<capture_stats_t>(),
        8usize,
        concat!("Alignment of ", stringify!(capture_stats_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).packets_received) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_stats_t),
            "::",
            stringify!(packets_received)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).packets_dropped) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_stats_t),
            "::",
            stringify!(packets_dropped)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).packets_if_dropped) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_stats_t),
            "::",
            stringify!(packets_if_dropped)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bytes_received) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_stats_t),
            "::",
            stringify!(bytes_received)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).start_time) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_stats_t),
            "::",
            stringify!(start_time)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).end_time) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(capture_stats_t),
            "::",
            stringify!(end_time)
        )
    );
}
